--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EZ Webpack Starter</title>
+    <meta name="description" content="This is an awesome Webpack starter !">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
+  <header>
+    <img class="logo" src="images/logo.svg" alt="">
+    <h1>EZ Webpack Starter</h1>
+    <nav>
+      <a class="link" href="https://github.com/ColinLienard/ez-webpack-starter" target="_blank" rel="noreferrer">Github</a>
+      <a class="link" href="https://colin-lienard.fr/" target="_blank" rel="noreferrer">Author</a>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <p>✔ This starter is using Sass, PostCSS, Typescript and Eslint with the Airbnb config.</p>
+      <p>✔ No links are needed to make things work.</p>
+      <p>✔ It also contains a custom css reset.</p>
+    </article>
+    <section>
+      <p>Start developing now with</p>
+      <div class="shellBlock">
+        <button>yarn dev</button>
+        <button>npm run dev</button>
+      </div>
+      <p>...and create an optimized production build with</p>
+      <div class="shellBlock">
+        <button>yarn build</button>
+        <button>npm run build</button>
+      </div>
+    </section>
+  </main>
+  <div class="modal">
+    <p>❕ Copied to clipboard!</p>
+  </div>
 </body>
 </html>
